--- a/sharedspace/Base.lproj/Main.storyboard
+++ b/sharedspace/Base.lproj/Main.storyboard
@@ -10,13 +10,15 @@
         <scene sceneID="a3G-fa-JTE">
             <objects>
                 <tableViewController id="JYh-tu-s2k" customClass="HomeTableViewController" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="105" sectionHeaderHeight="28" sectionFooterHeight="28" id="BXS-5j-n1h">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="105" sectionHeaderHeight="28" sectionFooterHeight="28" id="BXS-5j-n1h">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         <navigationBar key="tableHeaderView" contentMode="scaleToFill" barStyle="black" id="YOT-gh-oof">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <color key="barTintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <items>
                                 <navigationItem title="Sharedspaces" id="psP-9j-UX4"/>
                             </items>
@@ -52,7 +54,7 @@
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="K4d-Nd-D9A" kind="show" id="YT1-EF-t1m"/>
+                                    <segue destination="NvM-bP-l0k" kind="show" id="YT1-EF-t1m"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -67,7 +69,7 @@
             </objects>
             <point key="canvasLocation" x="604.5" y="380.5"/>
         </scene>
-        <!--Lists Table View Controller-->
+        <!--Lists-->
         <scene sceneID="zrq-ny-UHD">
             <objects>
                 <tableViewController id="K4d-Nd-D9A" customClass="ListsTableViewController" sceneMemberID="viewController">
@@ -75,32 +77,24 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <navigationBar key="tableHeaderView" tag="2" contentMode="scaleToFill" id="EDy-3X-GjX">
-                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                            <items>
-                                <navigationItem title="Lists" id="Lca-mm-I8r"/>
-                            </items>
-                        </navigationBar>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="listsItem" rowHeight="61" id="Pgb-nR-fQj">
-                                <rect key="frame" x="0.0" y="72" width="375" height="61"/>
+                                <rect key="frame" x="0.0" y="92" width="375" height="61"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Pgb-nR-fQj" id="obB-HG-huZ">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eKU-ur-3XE">
-                                            <rect key="frame" x="14" y="11" width="298" height="21"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ftD-ec-qC4">
+                                            <rect key="frame" x="23" y="20" width="45" height="21"/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="eKU-ur-3XE" firstAttribute="leading" secondItem="obB-HG-huZ" secondAttribute="leadingMargin" constant="20" id="7zV-fN-dt7"/>
-                                        <constraint firstItem="eKU-ur-3XE" firstAttribute="centerY" secondItem="obB-HG-huZ" secondAttribute="centerY" id="9f7-h2-yQT"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="eKU-ur-3XE" secondAttribute="trailing" constant="20" id="zjV-nQ-uSv"/>
+                                        <constraint firstItem="ftD-ec-qC4" firstAttribute="centerY" secondItem="obB-HG-huZ" secondAttribute="centerY" id="LdR-Js-XDX"/>
+                                        <constraint firstItem="ftD-ec-qC4" firstAttribute="leading" secondItem="obB-HG-huZ" secondAttribute="leadingMargin" constant="15" id="pif-P6-4nV"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
@@ -113,11 +107,12 @@
                             <outlet property="delegate" destination="K4d-Nd-D9A" id="uu3-v1-cHf"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" title="Lists" id="vqb-ew-X6a"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dZT-aC-WrP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1104.5" y="380.5"/>
+            <point key="canvasLocation" x="1691.5" y="380.5"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="JMn-cE-J3s">
@@ -134,7 +129,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bxg-az-cEG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1717.5" y="380.5"/>
+            <point key="canvasLocation" x="2304.5" y="380.5"/>
         </scene>
         <!--The List Name-->
         <scene sceneID="EUf-Gx-hWl">
@@ -173,10 +168,10 @@
                                 <rect key="frame" x="25" y="134" width="325" height="200"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="335" id="MDb-GL-hEq"/>
+                                    <constraint firstAttribute="width" constant="345" id="MDb-GL-hEq"/>
                                     <constraint firstAttribute="height" constant="400" id="aSU-af-KRD"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                         </subviews>
@@ -185,7 +180,7 @@
                             <constraint firstItem="a7X-tP-vth" firstAttribute="top" secondItem="Ndg-50-MeB" secondAttribute="bottom" constant="10" id="Bn3-Jt-Fk4"/>
                             <constraint firstItem="gbp-t3-Qsr" firstAttribute="top" secondItem="LJk-D9-R5M" secondAttribute="bottom" constant="30" id="HoR-9i-cRz"/>
                             <constraint firstItem="gbp-t3-Qsr" firstAttribute="centerX" secondItem="h3B-zo-B2G" secondAttribute="centerX" id="SyH-aR-u1m"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="gbp-t3-Qsr" secondAttribute="trailing" constant="20" id="UtI-aJ-szM"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="gbp-t3-Qsr" secondAttribute="trailing" constant="15" id="UtI-aJ-szM"/>
                             <constraint firstItem="IYa-s5-erc" firstAttribute="centerY" secondItem="LJk-D9-R5M" secondAttribute="centerY" id="YZO-l5-akg"/>
                             <constraint firstItem="LJk-D9-R5M" firstAttribute="leading" secondItem="a7X-tP-vth" secondAttribute="trailing" constant="25" id="hi6-Kt-g7S"/>
                             <constraint firstItem="a7X-tP-vth" firstAttribute="leading" secondItem="h3B-zo-B2G" secondAttribute="leadingMargin" constant="64" id="iZb-V4-NWd"/>
@@ -193,7 +188,7 @@
                             <constraint firstItem="IYa-s5-erc" firstAttribute="baseline" secondItem="LJk-D9-R5M" secondAttribute="baseline" id="mx1-zQ-pBb"/>
                             <constraint firstItem="LJk-D9-R5M" firstAttribute="baseline" secondItem="a7X-tP-vth" secondAttribute="baseline" id="n1I-4h-AOp"/>
                             <constraint firstAttribute="trailingMargin" secondItem="IYa-s5-erc" secondAttribute="trailing" constant="64" id="oZD-hH-dRp"/>
-                            <constraint firstItem="gbp-t3-Qsr" firstAttribute="leading" secondItem="h3B-zo-B2G" secondAttribute="leadingMargin" constant="20" id="t60-wZ-y20"/>
+                            <constraint firstItem="gbp-t3-Qsr" firstAttribute="leading" secondItem="h3B-zo-B2G" secondAttribute="leadingMargin" constant="15" id="t60-wZ-y20"/>
                             <constraint firstItem="LJk-D9-R5M" firstAttribute="centerY" secondItem="a7X-tP-vth" secondAttribute="centerY" id="wHK-ay-Gnh"/>
                         </constraints>
                         <variation key="default">
@@ -214,7 +209,25 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="p7m-e7-KMZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2246.5" y="380.5"/>
+            <point key="canvasLocation" x="2833.5" y="380.5"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="AOd-id-nJs">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="NvM-bP-l0k" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="xfl-af-zXY">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="K4d-Nd-D9A" kind="relationship" relationship="rootViewController" id="wDa-6J-jxH"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Yb4-fy-ug6" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1104.5" y="380.5"/>
         </scene>
     </scenes>
 </document>
